apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  name: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/name: n8n
    spec:
      containers:
        - name: n8n
          image: n8n
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5678
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              cpu: 1000m
              memory: 1700Mi
            requests:
              cpu: 25m
              memory: 864Mi

          volumeMounts:
            - mountPath: /data
              name: data

      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smb-n8n-claim
